BUGFIX: Adjust scrollbars to Neos style

--- a/Resources/Public/Styles/Module.css
+++ b/Resources/Public/Styles/Module.css
@@ -123,3 +123,23 @@
 .neos [popover] p {
     white-space: pre-wrap;
 }
+
+/**
+ * Scollbars
+ */
+::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--grayLight);
+}
+
+::-webkit-scrollbar-corner {
+    background-color: var(--grayDark);
+}
